Unmaximized but not unfullscreened
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox103 | --- | verified |
People
(Reporter: vasdzm, Assigned: emilio)
References
Details
Attachments
(2 files, 1 obsolete file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:101.0) Gecko/20100101 Firefox/101.0
Steps to reproduce:
Ubuntu 21.10
Gnome 42.1, X11
Firefox from snap, reproducible in Nightly build 20220604092742
With title bar hidden:
maximize Firefox window (by double-click on top bar)
set it full-screen (by pressing F11 key)
move cursor to the upper edge of the screen
double-click the bar
Actual results:
The window ends up in unexpected state. It behaves as fullscreen window but it's not one.
Expected results:
I expect window to stay maximized.
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Assignee | ||
Comment 2•4 years ago
|
||
We don't call MakeFullScreen(false), causing weirdness. This is needed even
with the next patch because otherwise other things like grabbing the tabbar
cause the same kind of weirdness.
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
It's probably unexpected (even though after the patch above it behaves
properly).
Depends on D148340
Comment 4•4 years ago
|
||
Comment on attachment 9279753 [details]
Bug 1772693 - Fix transition from fullscreen to maximized. r=stransky
Revision D148340 was moved to bug 1773118. Setting attachment 9279753 [details] to obsolete.
Comment 6•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
I managed to reproduce this issue on a 2022-06-04 Nightly build on Ubuntu 22.04 using the steps from the Description. Verified as fixed on Firefox 103.0b9(build ID: 20220714185732), Nightly 104.0a1(build ID: 20220717190235) and Nightly 104.0a1 Snap build(build ID: 20220718020349) on Ubuntu 22.04.
Updated•4 years ago
|
Description
•