Bug 1772693 - Don't transition from fullscreen -> maximized on double-click. r=stransky

It's probably unexpected (even though after the patch above it behaves
properly).

Depends on D148340

Differential Revision: https://phabricator.services.mozilla.com/D148341